--- a/index.html
+++ b/index.html
@@ -135,9 +135,11 @@
                     </div>
                 </div>
                 <div class="section-3-imgs">
-                    <img src="app/img/photo-1493409137604-0901c55e4456.png" alt="cabage">
-                    <img src="app/img/photo-1543364195-bfe6e4932397.png" alt="veg">
-                    <img src="app/img/photo-1448387473223-5c37445527e7.png" alt="step">
+                    <div class="section-3-imgs-top">
+                        <a href="#"><img src="app/img/cabage.png" alt="cabage"></a>
+                        <a href="#"><img src="app/img/vegetables.png" alt="veg"></a>
+                    </div>
+                    <a href="#"><img src="app/img/step.png" alt="step"></a>
                 </div>
             </div>
         </section>
@@ -224,7 +226,7 @@
                             <p>Free for Life</p>
                         </div>
                         <div class="article-mid">
-                            <p>OUR MOST POPULAR</p>
+                            <p>FOR EVERYONE</p>
                         </div>
                         <div class="article-bottom">
                             <p>1 GB OF SPACE</p>
