--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- MAIN -->
     <main>
         <!-- SECTION 1 -->
-        <section class="section-1">
+        <section class="section-1" style="background-image: url(app/img/photo-1480714378408-67cf0d13bc1b@2x.jpg);">
             <div class="section-1-container">
                 <!-- LEFT SIDE -->
                 <article>
