--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
         </section>
         <!-- SECTION 3 -->
-        <section class="section-3">
+        <section class="section-3" style="background-image: url(app/img/christoffer-engstrom-503481-unsplash@2x.png);">
             <div class="section-3-container">
                 <div class="swiper-buttons">
                     <button index="1"><span>Register</span></button>
