--- a/index.html
+++ b/index.html
@@ -5,46 +5,51 @@
     <!-- ViewPort -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+
     <!-- Normalizer -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Swiper JS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
     <!-- Custom Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/e57c2904bb.js" crossorigin="anonymous"></script>
+
     <!-- Cusom CSS -->
     <link rel="stylesheet" href="app/css/style.css">
-    <!-- Custom JS -->
-    <script src="script.js" defer></script>
+
     <!-- Swiper JS -->
     <script src="swiper.js" defer></script>
+
     <!-- Title -->
     <title>Cheshire County</title>
 </head>
-<body>
+<body id="da-top">
     <!-- Navigation MENU -->
     <nav id="navigation">
         <div class="nav-container">
-            <img src="./app/img/cheshire-county-hygiene-services.svg" alt="logo">
+            <img id="nav-logo" src="./app/img/cheshire-county-hygiene-services.svg" alt="logo">
             <div class="navigation-links">
-                <a href="#">Features</a>
-                <a href="#">About</a>
-                <a href="#">Pricing</a>
-                <a href="#">Reviews</a>
-                <a href="#">Contacts</a>
+                <a onclick="jumpTo(1)" class="nav-button" >Features</a>
+                <a onclick="jumpTo(2)" class="nav-button" >About</a>
+                <a onclick="jumpTo(3)" class="nav-button" >Pricing</a>
+                <a onclick="jumpTo(4)" class="nav-button" >Reviews</a>
+                <a onclick="jumpTo(5)" class="nav-button" >Contacts</a>
             </div>
         </div>
     </nav>
     <!-- MAIN -->
     <main>
         <!-- SECTION 1 -->
-        <section class="section-1" style="background-image: url(app/img/photo-1480714378408-67cf0d13bc1b@2x.jpg);">
+        <section id="section-1" class="section-1">
             <div class="section-1-container">
                 <!-- LEFT SIDE -->
                 <article>
@@ -69,9 +74,9 @@
                         <h5>Type of subscription</h5>
                         <div class="radio-sub">
                             <input type="radio" name="sub" id="monthly" required>
-                            <label for="monthly">monthly</label>
+                            <label for="monthly" id="monthly-label">monthly</label>
                             <input type="radio" name="sub" id="yearly" required>
-                            <label for="yearly">yearly</label>
+                            <label for="yearly" id="yearly-label">yearly</label>
                         </div>
                     </div>
                     <button>Get started</button>
@@ -79,28 +84,28 @@
             </div>
         </section>
         <!-- SECTION 2 -->
-        <section class="section-2">
+        <section id="section-2" class="section-2">
             <div class="section-2-container">
                 <div class="social-media">
                     <h5>Social Media</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
                 </div>
                 <div class="social-icons">
-                    <a href="#"><img src="app/img/facebook-logo.png" alt="fb"></a>
-                    <a href="#"><img src="app/img/instagram-logo.png" alt="inst"></a>
-                    <a href="#"><img src="app/img/twitter.png" alt="twit"></a>
-                    <a href="#"><img src="app/img/pinterest.png" alt="pint"></a>
-                    <a href="#"><img src="app/img/WIFI_icon.svg" alt="wifi"></a>
+                    <a><img src="app/img/facebook-logo.png" alt="fb"></a>
+                    <a><img src="app/img/instagram-logo.png" alt="inst"></a>
+                    <a><img src="app/img/twitter.png" alt="twit"></a>
+                    <a><img src="app/img/pinterest.png" alt="pint"></a>
+                    <a><img src="app/img/WIFI_icon.svg" alt="wifi"></a>
                 </div>
             </div>
         </section>
         <!-- SECTION 3 -->
-        <section class="section-3" style="background-image: url(app/img/christoffer-engstrom-503481-unsplash@2x.png);">
+        <section id="section-3" class="section-3">
             <div class="section-3-container">
                 <div class="swiper-buttons">
-                    <button index="1"><span>Register</span></button>
-                    <button index="2"><span>Apply</span></button>
-                    <button index="3"><span>Receive</span></button>
+                    <button class="swipe-button" index="1"><span>Register</span></button>
+                    <button class="swipe-button" index="2"><span>Apply</span></button>
+                    <button class="swipe-button" index="3"><span>Receive</span></button>
                 </div>
                 <!-- Swiper -->
                 <div class="swiper swiper1">
@@ -108,43 +113,66 @@
                     <div class="swiper-wrapper">
                         <!-- Slides -->
                         <div class="swiper-slide">
-                            <h3>Tabs with soft transitioning effect. Explained propriety of out perpetual his you.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit
-                            amet
-                            lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis
-                            dis
-                            parturient montes. </p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+                            <div class="swiper-text">
+                                <h3>Tabs with soft transitioning effect. Explained propriety of out perpetual his you.</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit
+                                    amet
+                                    lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis
+                                    dis
+                                    parturient montes. </p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+                            </div>
+                            <div class="section-3-imgs">
+                                <div class="section-3-imgs-top">
+                                    <a href="#"><img src="app/img/cabage.png" alt="cabage"></a>
+                                    <a href="#"><img src="app/img/vegetables.png" alt="veg"></a>
+                                </div>
+                                <a href="#"><img src="app/img/step.png" alt="step"></a>
+                            </div>
                         </div>
                             <div class="swiper-slide">
-                            <h3>Tabs with soft transitioning effect. Explained propriety of out perpetual his you.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit
-                            amet
-                            lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis
-                            dis
-                            parturient montes. </p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p></div>
+                                <div class="swiper-text">
+                                    <h3>Tabs with soft transitioning effect. Explained propriety of out perpetual his you.</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit
+                                        amet
+                                        lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis
+                                        dis
+                                        parturient montes. </p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+                                </div>
+                                <div class="section-3-imgs">
+                                    <div class="section-3-imgs-top">
+                                        <a href="#"><img src="app/img/cabage.png" alt="cabage"></a>
+                                        <a href="#"><img src="app/img/vegetables.png" alt="veg"></a>
+                                    </div>
+                                    <a href="#"><img src="app/img/step.png" alt="step"></a>
+                                </div>
+                            </div>
+
+
                             <div class="swiper-slide">
-                            <h3>Tabs with soft transitioning effect. Explained propriety of out perpetual his you.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit
-                            amet
-                            lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis
-                            dis
-                            parturient montes. </p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p></div>
+                            <div class="swiper-text">
+                                <h3>Tabs with soft transitioning effect. Explained propriety of out perpetual his you.</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit
+                                    amet
+                                    lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis
+                                    dis
+                                    parturient montes. </p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+                            </div>
+                            <div class="section-3-imgs">
+                                <div class="section-3-imgs-top">
+                                    <a href="#"><img src="app/img/cabage.png" alt="cabage"></a>
+                                    <a href="#"><img src="app/img/vegetables.png" alt="veg"></a>
+                                </div>
+                                <a href="#"><img src="app/img/step.png" alt="step"></a>
+                            </div>
                     </div>
-                </div>
-                <div class="section-3-imgs">
-                    <div class="section-3-imgs-top">
-                        <a href="#"><img src="app/img/cabage.png" alt="cabage"></a>
-                        <a href="#"><img src="app/img/vegetables.png" alt="veg"></a>
-                    </div>
-                    <a href="#"><img src="app/img/step.png" alt="step"></a>
                 </div>
             </div>
         </section>
         <!-- SECTION 4 -->
-        <section class="section-4">
+        <section id="section-4" class="section-4">
             <div class="section-4-container">
                 <div class="section-4-img">
                     <img src="app/img/cheshire-county-hygiene-services@2x.png" alt="logo">
@@ -160,7 +188,7 @@
                     <div class="bottom">
                         <article>
                             <div class="icon">
-                                <i class="far fa-comment"></i>
+                                <i class="far fa-eye"></i>
                             </div>
                             <div class="title-n-text">
                                 <h5>Title</h5>
@@ -184,7 +212,7 @@
             </div>
         </section>
         <!-- SECTION 5 -->
-        <section class="section-5">
+        <section id="section-5" class="section-5">
             <div class="section-5-container">
                 <section class="section-5-top">
                     <h4>WHY THIS IS AWESOME</h4>
@@ -198,7 +226,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod ibendum laoreet.</p>
                     </div>
                     <div>
-                        <i class="fas fa-leaf"></i>
+                        <i class="fas fa-spa"></i>
                         <h5>Well Crafted</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit Aenean euismod bibendum.</p>
                     </div>
@@ -211,7 +239,7 @@
             </div>
         </section>
         <!-- SECTION 6 -->
-        <section class="section-6">
+        <section id="section-6" class="section-6">
             <div class="section-6-container">
                 <section class="section-6-top">
                     <h4>PRICING OPTIONS</h4>
@@ -277,7 +305,7 @@
             </div>
         </section>
         <!-- SECTION 7 -->
-        <section class="section-7">
+        <section id="section-7" class="section-7">
             <div class="section-7-container">
                 <div class="section-7-top">
                     <h4>WHAT OUR CUSTOMERS ARE SAYING</h4>
@@ -354,7 +382,7 @@
             </div>
         </section>
         <!-- SECTION 8 -->
-        <section class="section-8">
+        <section id="section-8" class="section-8">
             <div class="section-8-container">
                 <div class="section-8-top">
                     <h4>CONTACT US</h4>
@@ -370,9 +398,9 @@
                             oninvalid="this.setCustomValidity('You Must Enter Your Phone Number')" required>
                         <div class="radio-input">
                             <input type="radio" name="contact" id="personal" required>
-                            <label for="personal" name="contact">PERSONAL</label>
+                            <label for="personal" name="contact" id="personal-label">PERSONAL</label>
                             <input type="radio" name="contact" id="company" required>
-                            <label for="company" name="contact">COMPANY</label>
+                            <label for="company" name="contact" id="company-label">COMPANY</label>
                         </div>
                         <button>SEND</button>
                     </form>
@@ -380,14 +408,14 @@
             </div>
         </section>
         <!-- SECTION 9 -->
-        <section class="section-9">
+        <section id="section-9" class="section-9">
             <div class="section-9-container">
                 <div class="social-icons">
-                    <a href="#"><img src="app/img/facebook-logo.png" alt="fb"></a>
-                    <a href="#"><img src="app/img/instagram-logo.png" alt="inst"></a>
-                    <a href="#"><img src="app/img/twitter.png" alt="twit"></a>
-                    <a href="#"><img src="app/img/pinterest.png" alt="pint"></a>
-                    <a href="#"><img src="app/img/WIFI_icon.svg" alt="wifi"></a>
+                    <a><img src="app/img/facebook-logo.png" alt="fb"></a>
+                    <a><img src="app/img/instagram-logo.png" alt="inst"></a>
+                    <a><img src="app/img/twitter.png" alt="twit"></a>
+                    <a><img src="app/img/pinterest.png" alt="pint"></a>
+                    <a><img src="app/img/WIFI_icon.svg" alt="wifi"></a>
                 </div>
                 <div class="copyright">
                     <p>© 2019 Cheshire County</p>
@@ -395,5 +423,7 @@
             </div>
         </section>
     </main>
+        <!-- Custom JS -->
+        <script src="script.js"></script>
 </body>
 </html>
