--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </article>
                 <!-- RIGHT SIDE -->
                 <form action="#">
-                    <h4>Try Your <span>free</span> Trial Today</h4>
+                    <h4><span id="section-1-h4">Try Your <span id="free">free</span> Trial Today</span></h4>
                     <div class="details">
                         <h5>Your details</h5>
                         <input type="text" placeholder="First name" oninput="this.setCustomValidity('')" oninvalid="this.setCustomValidity('You Must Enter Your Name')" required>
@@ -123,11 +123,9 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
                             </div>
                             <div class="section-3-imgs">
-                                <div class="section-3-imgs-top">
-                                    <a href="#"><img src="app/img/cabage.png" alt="cabage"></a>
-                                    <a href="#"><img src="app/img/vegetables.png" alt="veg"></a>
-                                </div>
-                                <a href="#"><img src="app/img/step.png" alt="step"></a>
+                                <div class="square"></div>
+                                <div class="square"></div>
+                                <div class="square"></div>
                             </div>
                         </div>
                             <div class="swiper-slide">
@@ -141,11 +139,9 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
                                 </div>
                                 <div class="section-3-imgs">
-                                    <div class="section-3-imgs-top">
-                                        <a href="#"><img src="app/img/cabage.png" alt="cabage"></a>
-                                        <a href="#"><img src="app/img/vegetables.png" alt="veg"></a>
-                                    </div>
-                                    <a href="#"><img src="app/img/step.png" alt="step"></a>
+                                    <div class="square"></div>
+                                    <div class="square"></div>
+                                    <div class="square"></div>
                                 </div>
                             </div>
 
@@ -160,13 +156,11 @@
                                     parturient montes. </p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
                             </div>
-                            <div class="section-3-imgs">
-                                <div class="section-3-imgs-top">
-                                    <a href="#"><img src="app/img/cabage.png" alt="cabage"></a>
-                                    <a href="#"><img src="app/img/vegetables.png" alt="veg"></a>
-                                </div>
-                                <a href="#"><img src="app/img/step.png" alt="step"></a>
-                            </div>
+                        <div class="section-3-imgs">
+                            <div class="square"></div>
+                            <div class="square"></div>
+                            <div class="square"></div>
+                        </div>
                     </div>
                 </div>
             </div>
