--- a/index.html
+++ b/index.html
@@ -38,11 +38,21 @@
         <div class="nav-container">
             <img id="nav-logo" src="./app/img/cheshire-county-hygiene-services.svg" alt="logo">
             <div class="navigation-links">
-                <a onclick="jumpTo(1)" class="nav-button" >Features</a>
-                <a onclick="jumpTo(2)" class="nav-button" >About</a>
-                <a onclick="jumpTo(3)" class="nav-button" >Pricing</a>
-                <a onclick="jumpTo(4)" class="nav-button" >Reviews</a>
-                <a onclick="jumpTo(5)" class="nav-button" >Contacts</a>
+                <a onclick="jumpTo(1)" class="nav-button top-menu-button" >Features</a>
+                <a onclick="jumpTo(2)" class="nav-button top-menu-button" >About</a>
+                <a onclick="jumpTo(3)" class="nav-button top-menu-button" >Pricing</a>
+                <a onclick="jumpTo(4)" class="nav-button top-menu-button" >Reviews</a>
+                <a onclick="jumpTo(5)" class="nav-button top-menu-button" >Contacts</a>
+                <img id="burger" src="app/img/menu-burger.svg" alt="">
+            </div>
+        </div>
+        <div class="side-menu">
+            <div class="navigation-links">
+                <a onclick="jumpTo(1)" class="nav-button side-menu-button">Features</a>
+                <a onclick="jumpTo(2)" class="nav-button side-menu-button">About</a>
+                <a onclick="jumpTo(3)" class="nav-button side-menu-button">Pricing</a>
+                <a onclick="jumpTo(4)" class="nav-button side-menu-button">Reviews</a>
+                <a onclick="jumpTo(5)" class="nav-button side-menu-button">Contacts</a>
             </div>
         </div>
     </nav>
