--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                 </article>
                 <!-- RIGHT SIDE -->
                 <form action="#">
-                    <h4><span id="section-1-h4">Try Your <span id="free">free</span> Trial Today</span></h4>
+                    <h4><span>Try Your <span id="free">free</span> Trial Today</span></h4>
                     <div class="details">
                         <h5>Your details</h5>
                         <input type="text" placeholder="First name" oninput="this.setCustomValidity('')" oninvalid="this.setCustomValidity('You Must Enter Your Name')" required>
                         <input type="text" placeholder="Last name" oninput="this.setCustomValidity('')" oninvalid="this.setCustomValidity('You Must Enter Your Last Name')" required>
                         <input type="number" placeholder="Phone number" oninput="this.setCustomValidity('')" oninvalid="this.setCustomValidity('You Must Enter Your Phone Number')" required>
                     </div>
-                    <div class="ratio-container">
+                    <div class="radio-container">
                         <h5>Type of subscription</h5>
                         <div class="radio-sub">
                             <input type="radio" name="sub" id="monthly" required>
