--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <p>Insipidity the sufficient discretion imprudence resolution sir him decisively. Proceed how any engaged visitor.
                         Explained propriety of out perpetual his you. Feel sold off felt nay rose met you. We so entreaties cultivated
                         astonished is.</p>
-                    <a href="#">Download</a>
+                    <a>Download</a>
                 </article>
                 <!-- RIGHT SIDE -->
                 <form action="#">
