--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a onclick="jumpTo(2)" class="nav-button top-menu-button" >About</a>
                 <a onclick="jumpTo(3)" class="nav-button top-menu-button" >Pricing</a>
                 <a onclick="jumpTo(4)" class="nav-button top-menu-button" >Reviews</a>
-                <a onclick="jumpTo(5)" class="nav-button top-menu-button" >Contacts</a>
+                <a onclick="jumpTo(5)" class="nav-button top-menu-button" >Contact</a>
                 <img id="burger" src="app/img/menu-burger.svg" alt="">
             </div>
         </div>
@@ -52,7 +52,7 @@
                 <a onclick="jumpTo(2)" class="nav-button side-menu-button">About</a>
                 <a onclick="jumpTo(3)" class="nav-button side-menu-button">Pricing</a>
                 <a onclick="jumpTo(4)" class="nav-button side-menu-button">Reviews</a>
-                <a onclick="jumpTo(5)" class="nav-button side-menu-button">Contacts</a>
+                <a onclick="jumpTo(5)" class="nav-button side-menu-button">Contact</a>
             </div>
         </div>
     </nav>
