clean white space

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
     <!-- MAIN -->
     <main>
-        <!-- SECTION 1 -->
+        <!-- SECTION 1 HEADING -->
         <section id="section-1" class="section-1">
             <div class="section-1-container">
                 <!-- LEFT SIDE -->
@@ -93,7 +93,7 @@
                 </form>
             </div>
         </section>
-        <!-- SECTION 2 -->
+        <!-- SECTION 2 SOCIAL MEDIA-->
         <section id="section-2" class="section-2">
             <div class="section-2-container">
                 <div class="social-media">
@@ -109,7 +109,7 @@
                 </div>
             </div>
         </section>
-        <!-- SECTION 3 -->
+        <!-- SECTION 3 SLIDES TABS-->
         <section id="section-3" class="section-3">
             <div class="section-3-container">
                 <div class="swiper-buttons">
@@ -175,7 +175,7 @@
                 </div>
             </div>
         </section>
-        <!-- SECTION 4 -->
+        <!-- SECTION 4  ABOUT-->
         <section id="section-4" class="section-4">
             <div class="section-4-container">
                 <div class="section-4-img">
@@ -215,7 +215,7 @@
                 </div>
             </div>
         </section>
-        <!-- SECTION 5 -->
+        <!-- SECTION 5 ABOUT 2-->
         <section id="section-5" class="section-5">
             <div class="section-5-container">
                 <section class="section-5-top">
@@ -242,7 +242,7 @@
                 </section>
             </div>
         </section>
-        <!-- SECTION 6 -->
+        <!-- SECTION 6 PRICING-->
         <section id="section-6" class="section-6">
             <div class="section-6-container">
                 <section class="section-6-top">
@@ -308,7 +308,7 @@
                 </section>
             </div>
         </section>
-        <!-- SECTION 7 -->
+        <!-- SECTION 7 REVIEWS-->
         <section id="section-7" class="section-7">
             <div class="section-7-container">
                 <div class="section-7-top">
@@ -385,7 +385,7 @@
                 </div>
             </div>
         </section>
-        <!-- SECTION 8 -->
+        <!-- SECTION 8 CONTACT-->
         <section id="section-8" class="section-8">
             <div class="section-8-container">
                 <div class="section-8-top">
@@ -411,7 +411,7 @@
                 </div>
             </div>
         </section>
-        <!-- SECTION 9 -->
+        <!-- SECTION 9 SOCIAL MEDIA-->
         <section id="section-9" class="section-9">
             <div class="section-9-container">
                 <div class="social-icons">
